clusters/dev-cluster/base/2048app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 2048app-service
spec:
  type: NodePort
  selector:
    app: 2048app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
